Test commit from lokalise. Edited one German translation.

--- a/languages/ILSMessages/de.ini
+++ b/languages/ILSMessages/de.ini
@@ -1,9 +1,9 @@
 available_for_pickup_notification = "Es stehen Medien für Sie zur Abholung bereit"
 checkout_block = "Sie können keine zusätzlichen Medien ausleihen."
-electronic_resources_block = "Sie haben keinen Zugriff auf elektronische Ressourcen"
+electronic_resources_block = Sie haben keinen Zugriff auf elektronische Ressourcen
 hold_wrong_user_institution = "Sie können keine Medien aus der gewünschten Bibliothek vormerken lassen."
-lost_card = "Ihre Karte ist als verloren gemeldet"
-message_from_library = "Sie haben eine Mitteilung Ihrer Bibliothek"
+lost_card = Ihre Karte ist als verloren gemeldet
+message_from_library = Sie haben eine Mitteilung Ihrer Bibliothek
 no_change_password_scope = "Sie sind nicht berechtigt Ihr Passwort zu ändern."
 no_delete_notifications_scope = "Sie sind nicht berechtigt Ihre Benachrichtigungen zu löschen."
 no_read_fees_scope = "Sie sind nicht berechtigt Ihre Gebühren einzusehen."
