Clean up unnecessary quotes in language files.

--- a/languages/de.ini
+++ b/languages/de.ini
@@ -610,7 +610,7 @@ hold_request_group = "Anfrage von"
 hold_requested_group = "Angefragt von"
 hold_required_by = "Nicht mehr benötigt nach"
 hold_required_by_date_before_start_date = "Bitte geben Sie ein 'erforderlich bis'-Datum an, welches nach dem Anfangsdatum liegt"
-hold_required_by_date_invalid = ""Bitte geben Sie ein 'erforderlich bis'-Datum an"
+hold_required_by_date_invalid = "Bitte geben Sie ein 'erforderlich bis'-Datum an"
 hold_required_by_optional = "Nicht mehr benötigt nach (fakultativ)"
 hold_start_date = "Anfangsdatum"
 hold_start_date_invalid = "Bitte geben Sie ein gültiges Anfangsdatum an"
