--- a/languages/nl.ini
+++ b/languages/nl.ini
@@ -1176,7 +1176,7 @@ storage_retrieval_request_comments = "Commentaar"
 storage_retrieval_request_date_invalid = "Vul een geldige datum in alsjeblieft"
 storage_retrieval_request_date_past = "Vul alsjeblieft een toekomstige datum in"
 storage_retrieval_request_empty_selection = "Geen aanvragen geselecteerd"
-storage_retrieval_request_error_blocked = "Je hebt onvoldoende rechten om een aanvraag op dit object te plaatsen"""
+storage_retrieval_request_error_blocked = "Je hebt onvoldoende rechten om een aanvraag op dit object te plaatsen"
 storage_retrieval_request_error_fail = "Jouw verzoek is mislukt. Contacteer Circulatie voor meer informatie."
 storage_retrieval_request_expires = "Loopt af op"
 storage_retrieval_request_invalid_pickup = "Er werd een ongeldige afhaal locatie ingegeven. Probeer het opnieuw."
