--- a/languages/nl.ini
+++ b/languages/nl.ini
@@ -395,7 +395,6 @@ Export = "Exporteer"
 Export Favorites = "Exporteer Favorieten"
 Export Items = "Export items"
 Export Record = "Exporteer Record"
-Export to = "Exporteer naar "
 export_choose_format = "Kies een format om te exporteren"
 export_download = "Bestand downloaden"
 export_exporting = "Export File wordt gemaakt"
@@ -408,6 +407,7 @@ export_selected = "Het geselecteerde exporteren"
 export_selected_favorites = "Geselecteerde favorieten exporteren"
 export_send = "Start exporteren naar %%service%%"
 export_success = "Export afgerond"
+export_to = "Exporteer naar %%target%%"
 export_unsupported_format = "niet ondersteund Export Format"
 external_auth_heading = "Toegang tot gelicentieerd materiaal"
 external_auth_login_message = "Log in om toegang te krijgen tot gelicentieerd materiaal"
