More language/UI tweaks.

--- a/languages/en.ini
+++ b/languages/en.ini
@@ -1045,8 +1045,9 @@ pronounced = "pronounced"
 Provider = "Provider"
 proxied_user = "Place request for proxied user"
 proxy_hold_place_success_html = "Your proxy request was successful. <a href="%%url%%">Your Holds and Recalls</a>."
-proxy_list_by = "Users You Can Proxy (Place Requests on Their Behalf)"
-proxy_list_for = "Users Who Can Act on Your Behalf"
+proxy_list_by = "These users can place requests on your behalf:"
+proxy_list_description = "A user's delegate has permission to place requests (called "proxy requests") on their behalf."
+proxy_list_for = "You can place requests on behalf of these users:"
 proxy_list_heading = "Delegates"
 Public = "Public"
 public_list_indicator = "Public List"
