--- a/languages/cy.ini
+++ b/languages/cy.ini
@@ -382,7 +382,6 @@ Export = "Allforio"
 Export Favorites = "Allforio Ffefrynnau"
 Export Items = "Allforio Eitemau"
 Export Record = "Allforio Cofnod"
-Export to = "Allforio i"
 export_choose_format = "Dewiswch fformat allforio"
 export_download = "Lawrlwytho Ffeil"
 export_exporting = "Creu Ffeil Allfudo"
@@ -395,6 +394,7 @@ export_selected = "Allfudo'r detholiad"
 export_selected_favorites = "Allfudo Ffefrynnau Dethol"
 export_send = "Dechrau allforio i %%service%%"
 export_success = "Allfudo'n Llwyddiannus"
+export_to = "Allforio i %%target%%"
 export_unsupported_format = "Fformat Allfudo na Chefnogwyd"
 external_auth_heading = "Mynediad i ddeunydd trwyddedig"
 external_auth_login_message = "Mewngofnodwch i gael mynediad i ddeunydd trwyddedig"
