implemented explain feature

--- a/languages/de.ini
+++ b/languages/de.ini
@@ -331,6 +331,7 @@ Description = "Beschreibung"
 Desired Username = "Gewünschter Benutzername"
 Detailed View = "Detailansicht"
 Details = "Details"
+Difference to top result relevance = "Differenz zu der top Relevanz"
 Displaying the top = "Angezeigt werden die ersten"
 Document Inspector = "Dokumentprüfer"
 Document Type = "Publikationsart"
@@ -403,6 +404,16 @@ Exception = "Exception"
 Excerpt = "Ausschnitt"
 exclude_facet = "[ausschließen]"
 exclude_newspapers = "Ohne Zeitungsartikel"
+explain_boost = " * %%boost%% (Boost)"
+explain_boost_description = "(Boost) = %%boost_description%%"
+explain_compared = "Relevanz im Vergleich zu der Trefferrelevanz des Top Treffers"
+explain_coord = " * %%coord%% (Ausgleich von Anzahl der Treffer im Vergleich zur Suche)"
+explain_disabled = "Explain ist für %%searchClassId%% deaktiviert"
+explain_modified_value = "Produkt von %%relevanceValue%% (Relevanzwert)"
+explain_modifier = "mit dem Modifier: %%modifier%%"
+explain_relevance = "Record Id: %%recordId%% gefunden mit einem Relevanzwert von %%relevanceValue%%"
+explain_sum = "Summe"
+Explanation for search = "Explain für Suche"
 Export = "Export"
 Export Favorites = "Favoriten exportieren"
 Export Items = "Exportieren"
@@ -1108,6 +1119,7 @@ relais_success_message = "Bestellnummer %%id%% wurde angelegt. Sie erhalten eine
 Related Author = "Ähnliche Verfasser"
 Related Items = "Ähnliche Datensätze"
 Related Subjects = "Ähnliche Schlagworte"
+Relevance = "Relevanz"
 Remove filter = "Suchfilter entfernen"
 Remove Filters = "Suchfilter entfernen"
 Remove from Book Bag = "Aus der Zwischenablage entfernen"
@@ -1341,6 +1353,7 @@ Too Many Email Recipients = "Zu viele E-Mail-Adressen"
 too_many_favorites = "Diese Liste ist zu gross um auf einmal angezeigt zu werden. Versuchen Sie Ihre Favoriten in weitere Listen zu unterteilen oder mittels Tags einzuschränken."
 too_many_new_items = "Es gibt zu viele Einträge um in einer einzigen Liste angezeigt zu werden. Versuchen Sie Ihre Suche weiter einzuschränken."
 too_many_reserves = "Es gibt zu viele Vormerkungen um in einer einzigen Liste angezeigt zu werden. Versuchen Sie Ihre Suche weiter einzuschränken."
+Top Result Relevance = "Top Treffer Relevanz"
 top_facet_label = "%%label%% innerhalb Ihrer Suche."
 Topic = "Thema"
 Topics = "Themen"
