--- a/languages/en.ini
+++ b/languages/en.ini
@@ -407,6 +407,15 @@ Exception = "Exception"
 Excerpt = "Excerpt"
 exclude_facet = "Exclude matching results"
 exclude_newspapers = "Exclude newspaper articles"
+explain_boost = " * %%boost%% (boost)"
+explain_boost_description = "(boost) = %%boost_description%%"
+explain_compared = "Relevance in comparison to the relevance of the top result"
+explain_coord = " * %%coord%% (adjust for number of matches compared to search)"
+explain_disabled = "Explain is deactivated for %%searchClassId%%"
+explain_modified_value = "Product of %%relevanceValue%% (relevance value)"
+explain_modifier = "with a modifier of %%modifier%%"
+explain_relevance = "Record Id: %%recordId%% found with a relevance value of %%relevanceValue%%"
+explain_sum = "sum"
 Export = "Export"
 Export Favorites = "Export Items"
 Export Items = "Export Items"
