--- a/languages/en.ini
+++ b/languages/en.ini
@@ -1045,9 +1045,9 @@ pronounced = "pronounced"
 Provider = "Provider"
 proxied_user = "Place request for proxied user"
 proxy_hold_place_success_html = "Your proxy request was successful. <a href="%%url%%">Your Holds and Recalls</a>."
-proxy_list_by = "These users can place requests on your behalf:"
-proxy_list_description = "A user's delegate has permission to place requests (called "proxy requests") on their behalf."
-proxy_list_for = "You can place requests on behalf of these users:"
+proxy_list_by = "These users are your delegates:"
+proxy_list_description = "A user's delegates have permission to perform some actions on their behalf."
+proxy_list_for = "You are a delegate for these users:"
 proxy_list_heading = "Delegates"
 Public = "Public"
 public_list_indicator = "Public List"
