[VUFIND-1598] Allow users to view their proxy relationships (#3006)

--- a/languages/en.ini
+++ b/languages/en.ini
@@ -1045,6 +1045,10 @@ pronounced = "pronounced"
 Provider = "Provider"
 proxied_user = "Place request for proxied user"
 proxy_hold_place_success_html = "Your proxy request was successful. <a href="%%url%%">Your Holds and Recalls</a>."
+proxy_list_by = "These users are your delegates:"
+proxy_list_description = "A user's delegates have permission to perform some actions on their behalf."
+proxy_list_for = "You are a delegate for these users:"
+proxy_list_heading = "Delegates"
 Public = "Public"
 public_list_indicator = "Public List"
 Publication = "Publication"
