--- a/languages/en.ini
+++ b/languages/en.ini
@@ -246,6 +246,7 @@ collection_disambiguation = "Found Multiple Matching Collections"
 collection_empty = "No items to display."
 collection_view_record = "View Record"
 Collections = "Collections"
+combined_jump_links_intro = "Jump to Results:"
 comment_anonymous_user = "Anonymous"
 comment_error_load = "Error: Could Not Redraw Comment List"
 comment_error_save = "Error: Could Not Save Comment"
